--- a/webMovieApp/searchingytvid/templates/searchingytvid/home.html
+++ b/webMovieApp/searchingytvid/templates/searchingytvid/home.html
@@ -42,6 +42,7 @@
           {% csrf_token %}
           <input type="text" name="ytsearch" class="form-control" aria-label="Username">
       </div>
+      <button href="#" type="submit" class="btn btn-primary my-2">YouTube Searching </button>
     </form>
     </div>
   </section>
