--- a/webMovieApp/searchingytvid/templates/searchingytvid/dashboard.html
+++ b/webMovieApp/searchingytvid/templates/searchingytvid/dashboard.html
@@ -17,9 +17,12 @@
     <!-- Jquery CDN  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style>
-        .checked {
-            color: orange;
-        <style>
+        #iddashbtn {
+            border: none;
+            outline: none;
+            background: none;
+            cursor: pointer;
+        }
       </style>
     
   </head>
@@ -31,32 +34,44 @@
       <div class="row justify-content-center">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar scroll</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
           <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+              
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/getDashboardPageonUserID?uname={{uemail}}&uid={{userid}}">Dashboard</a>
+                <form  action="/getDashboardPageonUserID" method="post">
+                  <button class="nav-link active shadow-none border-none" 
+                      id="iddashbtn" aria-current="page" type="submit">Dashboard</button>
+                  {% csrf_token %}
+                  <input type="hidden" name="dash_uname" value="{{uemail}}" />
+                  <input type="hidden" name="dash_userid" value="{{userid}}" />
+                </form>  
               </li>
+
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <form  action="/" method="get">
+                  <button class="nav-link active shadow-none border-none" 
+                      id="iddashbtn" aria-current="page" type="submit">Search on YouTube</button>
+                      
+                </form>  
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Link
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
+
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
+                <form  action="/users/registerationPage" method="">
+                  <button class="nav-link active shadow-none border-none" 
+                      id="iddashbtn" aria-current="page" type="submit">Register New User</button>
+                  {% csrf_token %}
+                </form>  
               </li>
+
+              <li class="nav-item">
+                <form  action="/users/loginPage" method="">
+                  <button class="nav-link active shadow-none border-none" 
+                      id="iddashbtn" aria-current="page" type="submit">Login</button>
+                  {% csrf_token %}
+                </form>  
+              </li>
+              
+
             </ul>
             <form class="d-flex">
                 <p class="btn btn-outline-success" type="submit">Welcome {{uemail}} !! </p>
@@ -66,6 +81,11 @@
       </nav>
       </div>
     </div>
+
+
+
+
+
 
 
     {% comment %} this just for pass by and rendering to diffrent parts {% endcomment %}
@@ -169,7 +189,7 @@
 
 <script>
 
-    function searchOnYoutube(ytsearch){
+    {% comment %} function searchOnYoutube(ytsearch){
         $.ajax({
             url: '/displatytsearchresult',
             async: true,
@@ -188,7 +208,7 @@
           )
           
           return false;
-    }
+    } {% endcomment %}
 
 
   </script>
