--- a/webMovieApp/searchingytvid/templates/searchingytvid/home.html
+++ b/webMovieApp/searchingytvid/templates/searchingytvid/home.html
@@ -8,11 +8,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Search YouTube</title>
+    {% load static %}  
+    <script src="{% static 'searchingytvid/js/ythomelogic.js' %}" type="text/javascript"></script>  
+
+    <!-- CSS CUSTOM -->
+    {% load static %}  
+    <link rel="stylesheet" href="{% static 'searchingytvid/css/ythomeStyle.css' %}">
+
+
 
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- Jquery CDN  -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <style>
       .bd-placeholder-img {
@@ -29,52 +39,80 @@
           font-size: 3.5rem;
         }
       }
+
+      
+    </style>
+
+    <style>
+
+      #iddashbtn {
+        border: none;
+        outline: none;
+        background: none;
+        cursor: pointer;
+    }
     </style>
     <!-- Custom styles for this template -->
     {% comment %} <link href='{% static 'searchingytvid/homeStyle.css' %}' rel="stylesheet"> {% endcomment %}
     
   </head>
   <body>
+    {% comment %} header section starts {% endcomment %}
     <div class="container">
       <div class="row justify-content-center">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar scroll</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
           <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+              
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <form  action="/getDashboardPageonUserID" method="post">
+                  <button class="nav-link active shadow-none border-none" 
+                      id="iddashbtn" aria-current="page" type="submit">Dashboard</button>
+                  {% csrf_token %}
+                  <input type="hidden" name="dash_uname" value="{{uemail}}" />
+                  <input type="hidden" name="dash_userid" value="{{userid}}" />
+                </form>  
               </li>
+
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <form  action="/" method="get">
+                  <button class="nav-link active shadow-none border-none" 
+                      id="iddashbtn" aria-current="page" type="submit">Search on YouTube</button>
+                      
+                </form>  
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Link
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
+
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
+                <form  action="/users/registerationPage" method="">
+                  <button class="nav-link active shadow-none border-none" 
+                      id="iddashbtn" aria-current="page" type="submit">Register New User</button>
+                  {% csrf_token %}
+                </form>  
               </li>
+
+              <li class="nav-item">
+                <form  action="/users/loginPage" method="">
+                  <button class="nav-link active shadow-none border-none" 
+                      id="iddashbtn" aria-current="page" type="submit">Login</button>
+                  {% csrf_token %}
+                </form>  
+              </li>
+              
+
             </ul>
             <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+                <p class="btn btn-outline-success" type="submit">Welcome {{uemail}} !! </p>
+            </form> 
           </div>
         </div>
       </nav>
       </div>
     </div>
+
+
+  {% comment %} header section ends {% endcomment %}
+
 
     <div class="container">
       <div class="row justify-content-center">
@@ -82,16 +120,24 @@
           <section class="jumbotron text-center">
             <div class="main-container text-center">
               <h1 class="jumbotron-heading">Search YouTube</h1>
-              <form action="displatytsearchresult" method="POST">
               <div class="input-group mb-3">
-                  {% csrf_token %}
-                  <input type="text" name="ytsearch" class="form-control" aria-label="Username">
+                  <input type="text" name="ytsearch" id="ytsearch" class="form-control" 
+                  aria-label="Username">
               </div>
-              <button href="#" type="submit" class="btn btn-primary my-2">YouTube Searching </button>
-            </form>
+              {% csrf_token %}
+              <button href="#" type="submit" onclick="displatytsearchresultfor_home()"
+               class="btn btn-primary my-2">YouTube Searching </button>
             </div>
           </section>
         
+          <div class="album py-5 bg-light">
+            <div class="main-container text-center">
+              <div class="row" id="ytdataResponse">
+                
+              </div>
+            </div>
+          </div>
+
           <div class="album py-5 bg-light">
             <div class="main-container text-center">
               <div class="row">
@@ -99,12 +145,14 @@
                   {% for vid in videos %} 
                     <div class="col-md-4">
                       <div class="card mb-4 shadow-sm">
-                        <img class="bd-placeholder-img card-img-top" width="100%" height="225" src={{vid.thumbnails}} preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"></img>
+                        <img class="bd-placeholder-img card-img-top" width="100%" height="225" 
+                        src={{vid.thumbnails}} preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"></img>
                         <div class="card-body">
-                          <p class="card-text">Video title for loop</p>
+                          <p class="card-text">{{vid.title}}</p>
                           <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                              <a type="button" href="{{ vid.url }}" class="btn btn-sm btn-outline-secondary">Hommiiee </a>
+                              <a type="button" href="${vid.url }"
+                               class="btn btn-md btn-outline-danger">Watch on Youtube </a>
                             </div>
                             <small class="text-muted">{{ vid.totaltimeinMinutes}} mins</small>
                           </div>
@@ -120,6 +168,8 @@
               </div>
             </div>
           </div>
+
+
         </main>
     </div>
 
