--- a/webMovieApp/searchingytvid/templates/searchingytvid/moreInfo.html
+++ b/webMovieApp/searchingytvid/templates/searchingytvid/moreInfo.html
@@ -11,6 +11,10 @@
     {% load static %}  
     <script src="{% static 'searchingytvid/js/moreinfologic.js' %}" type="text/javascript"></script>  
 
+    <!-- CSS CUSTOM -->
+    {% load static %}  
+    <link rel="stylesheet" href="{% static 'searchingytvid/css/moreInfoStyle.css' %}">
+    
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -19,15 +23,6 @@
     
     <!-- Jquery CDN  -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <style>
-        .checked {
-            color: orange;
-            
-        #posterimage{
-            height: 450px;
-            width: 364px;
-        }
-      </style>
     
   </head>
   <body>
@@ -36,38 +31,44 @@
         <div class="row justify-content-center">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar scroll</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarScroll">
               <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                
                 <li class="nav-item">
-                  {% comment %} <a class="nav-link active" aria-current="page" onclick="getDashboardPageonUserID()">Dashboard</a> {% endcomment %}                                
                   <form  action="/getDashboardPageonUserID" method="post">
-                    <button class="nav-link active shadow-none border-none" id="iddashbtn"aria-current="page" type="submit">Dashboard</button>
+                    <button class="nav-link active shadow-none border-none" 
+                        id="iddashbtn" aria-current="page" type="submit">Dashboard</button>
                     {% csrf_token %}
-                    <input type="hidden" name="uname" value="{{uemail}}" />
-                    <input type="hidden" name="userid" value="{{userid}}" />
+                    <input type="hidden" name="dash_uname" value="{{uemail}}" />
+                    <input type="hidden" name="dash_userid" value="{{userid}}" />
                   </form>  
                 </li>
+  
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <form  action="/" method="get">
+                    <button class="nav-link active shadow-none border-none" 
+                        id="iddashbtn" aria-current="page" type="submit">Search on YouTube</button>
+                        
+                  </form>  
                 </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Link
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
-                </li>
+  
                 <li class="nav-item">
-                  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
+                  <form  action="/users/registerationPage" method="">
+                    <button class="nav-link active shadow-none border-none" 
+                        id="iddashbtn" aria-current="page" type="submit">Register New User</button>
+                    {% csrf_token %}
+                  </form>  
                 </li>
+  
+                <li class="nav-item">
+                  <form  action="/users/loginPage" method="">
+                    <button class="nav-link active shadow-none border-none" 
+                        id="iddashbtn" aria-current="page" type="submit">Login</button>
+                    {% csrf_token %}
+                  </form>  
+                </li>
+                
+  
               </ul>
               <form class="d-flex">
                   <p class="btn btn-outline-success" type="submit">Welcome {{uemail}} !! </p>
@@ -77,6 +78,7 @@
         </nav>
         </div>
       </div>
+  
     {% comment %} header section ends {% endcomment %}
 
     <div class="container card mb-3 shadow-sm">
