--- a/webMovieApp/searchingytvid/static/searchingytvid/css/subscribeddashStyle.css
+++ b/webMovieApp/searchingytvid/static/searchingytvid/css/subscribeddashStyle.css
@@ -1,13 +1,52 @@
-#iddashbtn {
-    border: none;
-    outline: none;
-    background: none;
-    cursor: pointer;
-}
-
 #idytbtn {
 border: none;
 outline: none;
 background: none;
 cursor: pointer;
+}
+
+
+.iddashbtn {
+    border: none;
+    outline: none;
+    background: none;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem;
+    margin-bottom: 0.8rem;
+    font-family: cursive;
+}
+
+#ytbtn {
+    outline: none;
+    background: none;
+    cursor: pointer;
+
+    display: flex;
+    align-items: center;
+    font-size: 1.4rem;
+    margin-bottom: 0.8rem;
+    font-family: cursive;
+
+    border: 4px solid #ed0707!important;
+}  
+
+#userheader{
+    font-size: 1.8rem;
+    font-family: 'Kaushan Script', cursive;
+}
+
+#userbased_Content{
+    font-family: cursive;
+    font-weight: 100;
+    font-size: 1.3rem;
+}
+
+#errorcnt {
+    display: none;
+    margin-top: 13px;
+    margin-bottom: 10px;
+    background-color: #323030;
 }
