--- a/webMovieApp/searchingytvid/templates/searchingytvid/home.html
+++ b/webMovieApp/searchingytvid/templates/searchingytvid/home.html
@@ -25,101 +25,111 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
+     
+      #ytresponsedata {
+        font-size: 1.5rem;
+        margin-bottom: 0.8rem;
+        font-family: cursive;
+    }
       
     </style>
 
     <style>
-
-      #iddashbtn {
-        border: none;
-        outline: none;
-        background: none;
-        cursor: pointer;
-    }
     </style>
     <!-- Custom styles for this template -->
     {% comment %} <link href='{% static 'searchingytvid/homeStyle.css' %}' rel="stylesheet"> {% endcomment %}
     
   </head>
-  <body>
+  <body style="background-color: black;">
     {% comment %} header section starts {% endcomment %}
-    <div class="container">
-      <div class="row justify-content-center">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-              
-              <li class="nav-item">
-                <form  action="/getDashboardPageonUserID" method="post">
-                  <button class="nav-link active shadow-none border-none" 
-                      id="iddashbtn" aria-current="page" type="submit">Dashboard</button>
-                  {% csrf_token %}
-                  <input type="hidden" name="dash_uname" value="{{uemail}}" />
-                  <input type="hidden" name="dash_userid" value="{{userid}}" />
-                </form>  
-              </li>
+ <div class="container">
+   
+  <div class="row justify-content-center"> 
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="iddashbtn navbar-brand text-center" href="#">Navbar</a>
+      
+      <button onclick="toggleNavbar()" class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+          data-bs-target="#navbarScroll" aria-controls="navbarScroll" 
+          aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-              <li class="nav-item">
-                <form  action="/" method="get">
-                  <button class="nav-link active shadow-none border-none" 
-                      id="iddashbtn" aria-current="page" type="submit">Search on YouTube</button>
-                      
-                </form>  
-              </li>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" 
+        style="--bs-scroll-height: 100px;">
+          
+          <li class="nav-item">
+            <form  action="/getDashboardPageonUserID" method="post">
+              <button class="iddashbtn nav-link active shadow-none border-none" 
+                  id="" aria-current="page" type="submit">Dashboard</button>
+              {% csrf_token %}
+              <input type="hidden" name="dash_uname" value="{{uemail}}" />
+              <input type="hidden" name="dash_userid" value="{{userid}}" />
+            </form>  
+          </li>
 
-              <li class="nav-item">
-                <form  action="/users/registerationPage" method="">
-                  <button class="nav-link active shadow-none border-none" 
-                      id="iddashbtn" aria-current="page" type="submit">Register New User</button>
-                  {% csrf_token %}
-                </form>  
-              </li>
+          <li class="nav-item">
+            <form  action="/" method="get">
+              <button class="nav-link active rounded-top border border-danger" 
+                  id="ytbtn" aria-current="page" type="submit">Search on YouTube</button>
+                  
+            </form>  
+          </li>
 
-              <li class="nav-item">
-                <form  action="/users/loginPage" method="">
-                  <button class="nav-link active shadow-none border-none" 
-                      id="iddashbtn" aria-current="page" type="submit">Login</button>
-                  {% csrf_token %}
-                </form>  
-              </li>
-              
+          <li class="nav-item">
+            <form  action="/users/registerationPage" method="">
+              <button class="iddashbtn nav-link active shadow-none border-none" 
+                  id="" aria-current="page" type="submit">Register</button>
+              {% csrf_token %}
+            </form>  
+          </li>
 
-            </ul>
-            <form class="d-flex">
-                <p class="btn btn-outline-success" type="submit">Welcome {{uemail}} !! </p>
-            </form> 
-          </div>
-        </div>
-      </nav>
+          {% if uemail %}
+          <li class="nav-item">
+            <form  action="/returnSubscriberDashboardPage" method="POST">
+              {% csrf_token %}
+              <button class="iddashbtn nav-link active shadow-none border-none" 
+                  id="" aria-current="page" type="submit">Subscriber</button>
+                  <input type="hidden" name="sub_uname" value="{{uemail}}" />
+                  <input type="hidden" name="sub_userid" value="{{userid}}" />
+            </form>  
+          </li>
+          {% endif %} 
+
+
+          <li class="nav-item">
+            <form  action="/users/loginPage" method="">
+              <button class="iddashbtn nav-link active shadow-none border-none" 
+                  id="" aria-current="page" type="submit">Login</button>
+              {% csrf_token %}
+            </form>  
+          </li>
+          
+          <li class="nav-item">
+            <button class="iddashbtn nav-link active shadow-none border-none" onclick="logout()"
+                id="" aria-current="page" >Logout</button>
+          </li>
+
+        </ul>
+         <div id="userheader">
+            <p class="btn btn-outline-success" type="submit">Welcome {{uemail}} !! </p>
+        </div>  
       </div>
     </div>
+  </nav>
+  </div>
+</div> 
+{% comment %} header section ends {% endcomment %}
 
+  
 
-  {% comment %} header section ends {% endcomment %}
-
-
-    <div class="container">
+    <div class="container" id="ytcontainer">
       <div class="row justify-content-center">
         <main role="main">
           <section class="jumbotron text-center">
             <div class="main-container text-center">
-              <h1 class="jumbotron-heading">Search YouTube</h1>
+              <h1 class="jumbotron-heading" style="font-family: cursive;">Search YouTube</h1>
               <div class="input-group mb-3">
                   <input type="text" name="ytsearch" id="ytsearch" class="form-control" 
                   aria-label="Username">
@@ -138,7 +148,7 @@
             </div>
           </div>
 
-          <div class="album py-5 bg-light">
+          <div class="album py-5 bg-light" id="ytresponsedata" >
             <div class="main-container text-center">
               <div class="row">
                 {% comment %} {% if videos not in 'FAIL' %} {% endcomment %}
@@ -172,6 +182,15 @@
 
         </main>
     </div>
+
+   
+
+    <script>
+      function logout(){
+              document.cookie = "csrftoken=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+              window.location.href = "/users/loginPage"
+        }
+    </script>
 
 
 </body>
