--- a/webMovieApp/users/templates/users/registerationPage.html
+++ b/webMovieApp/users/templates/users/registerationPage.html
@@ -5,37 +5,55 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- CSS CUSTOM -->
+    {% load static %}  
+    <link rel="stylesheet" href="{% static 'users/css/regStyle.css' %}">
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+    <!-- Referd from this stylesheet for curisve login style  -->
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+    
+    
+    {% load static %}  
+    <script src="{% static 'users/js/reglogic.js' %}" type="text/javascript"></script>  
+    
+    {% comment %} this is for gif images {% endcomment %}
+    <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+
     <title>Register</title>
     <style>
 
-      #iddashbtn {
-        border: none;
-        outline: none;
-        background: none;
-        cursor: pointer;
-    }
     </style>
   </head>
-  <body>
+  <body style="background-color: black;">
 
 
 {% comment %} header section starts {% endcomment %}
 <div class="container">
-  <div class="row justify-content-center">
+   
+  <div class="row justify-content-center"> 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
+      <a class="iddashbtn navbar-brand text-center" href="#">Navbar</a>
+      
+      <button onclick="toggleNavbar()" class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+          data-bs-target="#navbarScroll" aria-controls="navbarScroll" 
+          aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
       <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" 
+        style="--bs-scroll-height: 100px;">
           
           <li class="nav-item">
             <form  action="/getDashboardPageonUserID" method="post">
-              <button class="nav-link active shadow-none border-none" 
-                  id="iddashbtn" aria-current="page" type="submit">Dashboard</button>
+              <button class="iddashbtn nav-link active shadow-none border-none" 
+                  id="" aria-current="page" type="submit">Dashboard</button>
               {% csrf_token %}
               <input type="hidden" name="dash_uname" value="{{uemail}}" />
               <input type="hidden" name="dash_userid" value="{{userid}}" />
@@ -44,53 +62,89 @@
 
           <li class="nav-item">
             <form  action="/" method="get">
-              <button class="nav-link active shadow-none border-none" 
-                  id="iddashbtn" aria-current="page" type="submit">Search on YouTube</button>
+              <button class="nav-link active rounded-top border border-danger" 
+                  id="ytbtn" aria-current="page" type="submit">Search on YouTube</button>
                   
             </form>  
           </li>
 
           <li class="nav-item">
             <form  action="/users/registerationPage" method="">
-              <button class="nav-link active shadow-none border-none" 
-                  id="iddashbtn" aria-current="page" type="submit">Register New User</button>
+              <button class="iddashbtn nav-link active shadow-none border-none" 
+                  id="" aria-current="page" type="submit">Register</button>
               {% csrf_token %}
             </form>  
           </li>
 
+          {% if uemail %}
+          <li class="nav-item">
+            <form  action="/returnSubscriberDashboardPage" method="POST">
+              {% csrf_token %}
+              <button class="iddashbtn nav-link active shadow-none border-none" 
+                  id="" aria-current="page" type="submit">Subscriber</button>
+                  <input type="hidden" name="sub_uname" value="{{uemail}}" />
+                  <input type="hidden" name="sub_userid" value="{{userid}}" />
+            </form>  
+          </li>
+          {% endif %} 
+
+
           <li class="nav-item">
             <form  action="/users/loginPage" method="">
-              <button class="nav-link active shadow-none border-none" 
-                  id="iddashbtn" aria-current="page" type="submit">Login</button>
+              <button class="iddashbtn nav-link active shadow-none border-none" 
+                  id="" aria-current="page" type="submit">Login</button>
               {% csrf_token %}
             </form>  
           </li>
           
+          <li class="nav-item">
+            <button class="iddashbtn nav-link active shadow-none border-none" onclick="logout()"
+                id="" aria-current="page" >Logout</button>
+          </li>
 
         </ul>
-        <form class="d-flex">
+         <div id="userheader">
             <p class="btn btn-outline-success" type="submit">Welcome {{uemail}} !! </p>
-        </form> 
+        </div>  
       </div>
     </div>
   </nav>
   </div>
-</div>
-
-
+</div> 
 {% comment %} header section ends {% endcomment %}
 
     <div class="container card ">
-        <h2 class="text-center"> Registeration Page</h2>
+        <h2 class="text-center" id="regPage"> Registeration Page</h2>
+        
         <div class="row card-body">
+          <div class="col-md-4 mb-3">
+          </div> 
+            
+          <div class="col-md-4 mb-3">
+            <div class="tenor-gif-embed" 
+                data-postid="4713512" 
+                  data-share-method="host" 
+                  data-aspect-ratio="1.39276" 
+                    data-width="100%">
+            <a href="https://tenor.com/view/movie-spongebob-watching-eating-popcorn-binge-watching-gif-4713512">
+              A Movie And Popcorn GIF
+            </a>from <a href="https://tenor.com/search/movie-gifs">Movie GIFs</a>
+          </div> 
+          </div> 
+
+          <div class="col-md-4 mb-3">
+          </div> 
 
             <form class="needs-validation" novalidate>
-                <div class="form-row">
+                <div class="row">
                   <div class="col-md-4 mb-3">
-                    <label for="validationCustom01">First name</label>
+                    <label for="validationCustom01" >First name</label>
                     <input type="text" class="form-control" id="validationCustom01" placeholder="First name" value="Mark" required>
                     <div class="valid-feedback">
                       Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      Please choose a first Name
                     </div>
                   </div>
                   <div class="col-md-4 mb-3">
@@ -98,6 +152,9 @@
                     <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto" required>
                     <div class="valid-feedback">
                       Looks good!
+                    </div>
+                    <div class="invalid-feedback">
+                      Please choose a Last Name
                     </div>
                   </div>
 
@@ -115,16 +172,17 @@
                     </div>
                   </div>
                 </div>
-
-                <div class="col-md-3 mb-3">
+              
+                <div class="row">
+                  <div class="col-md-3 mb-3">
                     <label for="validationCustom10">Password</label>
                     <input type="text" class="form-control" id="validationCustom10" placeholder="Chooese a strong password !! " required>
                     <div class="invalid-feedback">
                       Please provide a valid Password.
                     </div>
-                  </div>
+                    </div> 
 
-                <div class="form-row">
+
                   <div class="col-md-3 mb-3">
                     <label for="validationCustom06">Age</label>
                     <input type="text" class="form-control" id="validationCustom06" placeholder="Age" required>
@@ -136,14 +194,11 @@
                   <div class="col-md-3 mb-3">
                     <label for="validationCustom07">Gender</label>
                     <input type="text" class="form-control" id="validationCustom07" placeholder="Gender" required>
-                    {% comment %} <div class="invalid-feedback">
-                      Please provide a valid zip.
-                    </div> {% endcomment %}
                   </div>
 
                   <div class="col-md-3 mb-3">
                     <label for="validationCustom08">Genre</label>
-                    <input type="text" class="form-control" id="validationCustom08" placeholder="genre" required>
+                    <input type="text" class="form-control" id="validationCustom08" placeholder="Action , War , Rommance" required>
                     <div class="invalid-feedback">
                       Please provide a valid Genre.
                     </div>
@@ -152,12 +207,13 @@
                   
 
                   <div class="col-md-3 mb-3">
-                    <label for="validationCustom09">Role</label>
-                    <input type="text" class="form-control" id="validationCustom09" placeholder="Role" required>
+                    <label for="validationCustom09">Content Type</label>
+                    <input type="text" class="form-control" id="validationCustom09" placeholder="OTT/Movies/Podcast" required>
                     <div class="invalid-feedback">
-                      Please provide a valid Role.
+                      Please provide a valid Content Type.
                     </div>
                   </div>
+
 
 
 
@@ -173,77 +229,45 @@
                     </div>
                   </div>
                 </div>
-                <button class="btn btn-primary" type="submit">Submit form</button>
+
+
+                <div class="col-lg-12 text-center"  data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                  <button class="btn btn-primary " type="submit">Submit form</button>
+                </div>
               </form>
               
-              <script>
-              // Example starter JavaScript for disabling form submissions if there are invalid fields
-              (function() {
-                'use strict';
-                window.addEventListener('load', function() {
-                  // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                  var forms = document.getElementsByClassName('needs-validation');
-                  // Loop over them and prevent submission
-                  var validation = Array.prototype.filter.call(forms, function(form) {
-                    form.addEventListener('submit', function(event) {
-                      if (form.checkValidity() === false) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                      }
+              
 
-                      form.classList.add('was-validated');
-                      console.log("Need to add API Call")
-
-                      var newuserdetails = { "fname":$('#validationCustom01').val(),
-                      "lname":$('#validationCustom02').val(),
-                      "uname":$('#validationCustomUsername').val(),
-                      "uemail":$('#validationCustomUsername').val(),
-                      "age":$('#validationCustom06').val(),
-                      "gender":$('#validationCustom07').val(),
-                      "genre":$('#validationCustom08').val(),
-                      "role":$('#validationCustom09').val(),
-                      "upass":$('#validationCustom10').val(),
-                    };
-
-                      console.log(" >> "+newuserdetails);
-                      alert("Calling Ajax")
+              
+                <!-- Modal -->
+                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="staticBackdropLabel">Response !!! </h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body" id="ajaxresponse">
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Modal end-->
 
 
-                      $.ajax({
-                        url: '/users/regInfoToDB',
-                        async: false,
-                        dataType: 'json',        
-                        type: 'POST',
-                        data:newuserdetails,
-                        success: function (data) {
-                            console.log(data)
-                            alert(" >> "+data['uname'])
-                          } , error: function () {
-                            alert("error");
-                          }
-                        }
-                      )
 
-
-                    }, false);
-                  });
-                }, false);
-              })();
-              </script>
-    
     
         </div>
     </div>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>      
+  <script>
+    function logout(){
+            document.cookie = "csrftoken=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+            window.location.href = "/users/loginPage"
+      }
+  </script>
   </body>
 </html>
