Changed from Mysql to SQLlite

--- a/webMovieApp/searchingytvid/templates/searchingytvid/moreInfo.html
+++ b/webMovieApp/searchingytvid/templates/searchingytvid/moreInfo.html
@@ -161,7 +161,7 @@
 
 
                         <input type="hidden"  id="imdbID" value="{{meta.imdbID}}" />
-                        <input type="hidden"  id="userid" value="{{userID}}" />
+                        <input type="hidden"  id="userid" value="{{userid}}" />
 
 
                       </dl>
